2013-XX-XX Jan Kotanski <jankotan@gmail.com>
	* changing TangoDataWriter.json into TangoDataWriter.thejson
	* changing parameters in TangoDataWriter constructor
	* adding logging Streams 
	* adding nexdatas_canfail=FAILED attribute
	* tagged as 1.1.4

2013-04-26 Jan Kotanski <jankotan@gmail.com>
	* creating DeviceProxy for Tango DataSource in setup method
	* moving XMLCreator into nexdata.tools
	* tagged as 1.1.3

2013-04-16 Jan Kotanski <jankotan@gmail.com>
	* make fixes for 32bits version and old pninx
	* tagged as 1.1.2

2013-03-26 Jan Kotanski <jankotan@gmail.com>
	* adding support for vertices
	* changing TDS into TangoDataServer
	* adding tests
	* tagged as 1.1.1

2013-03-11 Jan Kotanski <jankotan@gmail.com>
	* adding  support for separate group names in link targets
	* making Elink.typesToNames private
	* removing a name parameter from class inherited from Elements
	* switches to pni.io library
	* extending shapes up to a rank value
	* adding tests
	* improving FieldArray class
	* tagged as 1.1.0


2013-02-06 Jan Kotanski <jankotan@gmail.com>
	* adding support for dimension casting
	* fetching a shape of the client datasource from the global JSON string
	* allowing storing client attributes of numeric types
	* fixing setting shuffle
	* tagged as 1.0.8


2013-01-21 Jan Kotanski <jankotan@gmail.com>
	* adding decoder for UTF8 and INT32 encoded data
	* fixing storing attributes in FieldArrays
	* fixing shape finding and FetchNameHandler conditions
	* fixing shape order in Tango DataSource
	* fixing fetching scalars by DB DataSource
	* tagged as 1.0.7

2012-12-18 Jan Kotanski <jankotan@gmail.com>
	* adding compression, i.e. attributes to strategy tag
	* updating README
	* adding support for int8, int16  and ISO8601 types
	* adding unittest for scalar integer counters
	* changing Tango states: OPEN -> EXTRACT, INIT -> OPEN
	* tagged as 1.0.6

2012-11-28 Jan Kotanski <jankotan@gmail.com>
	* adding flush of h5 file in close entry