@@ -1,7 +1,8 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
+	* adding checks during writing thejson and xmlSettings TangoDataWriter attributes
 	* changing TangoDataWriter.json into TangoDataWriter.thejson
 	* changing parameters in TangoDataWriter constructor
-	* adding logging Streams 
+	* adding logging Streams
 	* adding nexdatas_canfail=FAILED attribute
 	* tagged as 1.1.4
 
